--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Your Title</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,700;0,800;1,100;1,200;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <title>Car Display Prpject</title>
 </head>
+
 <body>
+    <div class="container">
+        <!-- <img src="assets/pattern.png" alt="background pattern"> -->
+        <div class="car economy">
+            <h1 class="header">Economy</h1>
+            <p class="p">This is an economy class</p>
+            <a href="#">View Economy Cars</a>
+           
+            <!-- <span class="img-economy">
+                <img src="assets/economic-car.png" alt="economy car">
+            </span> -->
+        </div>
+        <div class="car luxury">
+            <h1 class="header">Luxury</h1>
+            <p class="p">This is a luxury class</p>
+            <a href="#">View Luxury Cars</a>
+            <!-- <span class="img-luxury">
+                <img src="assets/luxury-car.png" alt="luxury car">
+            </span> -->
+        </div>
+        <div class="car family">
+            <h1 class="header">Family</h1>
+            <p class="p">This is a family class</p>
+            <a href="#">View Family Cars</a>
+            <!-- <span class="img-family">
+                <img src="assets/family-car.png" alt="family car">
+            </span> -->
+        </div>
+    </div>
+
     
 </body>
 </html>
